<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mentalmath.MainActivity">

    <TextView
        android:id="@+id/txtStaticXP"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/XP"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtXP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/txtStaticXP" />

    <Button
        android:id="@+id/btnEasy"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/Easy" />

    <Button
        android:id="@+id/btnMedium"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_below="@+id/btnEasy"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="50dp"
        android:text="@string/Medium" />

    <Button
        android:id="@+id/btnHard"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_below="@+id/btnMedium"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="50dp"
        android:text="@string/Hard" />

    <TextView
        android:id="@+id/txtStaticEasyUnlockStatus"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnEasy"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/unlocked"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtStaticEasyPassStatus"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtStaticEasyUnlockStatus"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="4dp"
        android:text="@string/passed"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtEasyUnlockStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnEasy"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/txtStaticEasyUnlockStatus" />

    <TextView
        android:id="@+id/txtEasyPassStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEasyUnlockStatus"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@+id/txtStaticEasyPassStatus" />

    <TextView
        android:id="@+id/txtStaticMediumUnlockStatus"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnMedium"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/unlocked"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtMediumUnlockStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnMedium"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/txtStaticMediumUnlockStatus" />

    <TextView
        android:id="@+id/txtStaticMediumPassStatus"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtStaticMediumUnlockStatus"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="4dp"
        android:text="@string/passed"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtMediumPassStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMediumUnlockStatus"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@id/txtStaticMediumPassStatus" />

    <TextView
        android:id="@+id/txtStaticHardUnlockStatus"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnHard"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/unlocked"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtHardUnlockStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnHard"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/txtStaticHardUnlockStatus" />

    <TextView
        android:id="@+id/txtStaticHardPassStatus"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtStaticHardUnlockStatus"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="4dp"
        android:text="@string/passed"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtHardPassStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtHardUnlockStatus"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@id/txtStaticHardPassStatus" />

    <TextView
        android:id="@+id/txtOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnHard"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="16dp"
        android:gravity="center" />

</RelativeLayout>