<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/CLBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CLText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtStaticQuestion"
            android:layout_width="110dp"
            android:layout_height="0dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/question"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txtStaticCorrect"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtStaticCorrect"
            android:layout_width="110dp"
            android:layout_height="0dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/correct_answer"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txtStaticUser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtStaticQuestion" />

        <TextView
            android:id="@+id/txtStaticUser"
            android:layout_width="110dp"
            android:layout_height="0dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/user_answer"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtStaticCorrect" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CLMath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/viewBlackLine"
        app:layout_constraintStart_toEndOf="@+id/CLText"
        app:layout_constraintTop_toTopOf="parent">

        <io.github.sidvenu.mathjaxview.MathJaxView
            android:id="@+id/mathViewQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </io.github.sidvenu.mathjaxview.MathJaxView>

        <io.github.sidvenu.mathjaxview.MathJaxView
            android:id="@+id/mathViewCorrectAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mathViewQuestion">

        </io.github.sidvenu.mathjaxview.MathJaxView>

        <io.github.sidvenu.mathjaxview.MathJaxView
            android:id="@+id/mathViewUserAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mathViewCorrectAnswer">

        </io.github.sidvenu.mathjaxview.MathJaxView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/viewBlackLine"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>